# frf

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  atoms.pb  cm.sh  compiler.pb  defines.pb  frf  frf.pb  frf.pbp  ipctest.frf  mem.pb  nextword  prims.pb  propgrid.pb  stack.pb  structures.pb  testsuite.frf  vm.pb  words.frf
documentation/: frf.graphml  historical.md  primlist.md
src/main/: atoms.c  atoms.h  compile.c  compile.h  datatypes.c  datatypes.h  events.c  events.h  files.c  frf.c  frf.h  prims.c  prims.h  sdsalloc.h  sfs.c  sfs.h  stack.c  stack.h  structures.c  structures.h  vm.c  vm.h
temp/: propertygriddanilo.pb  propertygridpeterb.pb  quadtree.pb  trie.pb  trieasm.pb
tests/: fizzbuzz.frf  infloop.frf  ipctest.frf  prototype.frf  replace.frf  wattsup.frf
